[project]
name = "modal-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dsrr47", email = "dsrr47@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "modal>=0.72.13",
    "openai>=1.59.7",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
modal-app = "modal_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
